# critical-one

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
config/: default.toml  production.toml
requests/: game.http
src/: config.rs  data.rs  error.rs  game.rs  handlers.rs  lib.rs  main.rs  roller.rs  state.rs
src/game/: domain.rs  mod.rs  roller.rs  tests.rs  types.rs
src/handlers/: mod.rs  rest.rs  ws.rs
